@@ -5,5 +5,4 @@ When elaborating argument cons1 to function FunErrTest.cadr:
 FunErrTest.idr:38:10:
 When elaborating right hand side of badCadr2:
 When elaborating argument cons2 to function FunErrTest.cadr:
-        Could not prove that tail [(fromInteger 1)] has at least two
-        elements.
+        Could not prove that tail [1] has at least two elements.
